Translate interface, Added new icon; Rename ini file

--- a/Mahou/Mahou.csproj
+++ b/Mahou/Mahou.csproj
@@ -240,6 +240,8 @@
     <Content Include="AS_dict.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <None Include="FaineSwitch.ico" />
+    <None Include="Resources\mainIcon.ico" />
   </ItemGroup>
   <ItemGroup>
     <PublishFile Include="AS_dict.txt">
