--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-/Mahou/bin/*
-/Mahou/obj/*
-/Mahou/*.suo
-/Mahou/*.user
-/Mahou/.vs/*
+/FaineSwitch/bin/*
+/FaineSwitch/obj/*
+/FaineSwitch/*.suo
+/FaineSwitch/*.user
+/FaineSwitch/.vs/*
