Added new icon and saving dictionary in setup file

--- a/FaineSwitch/FaineSwitch.csproj
+++ b/FaineSwitch/FaineSwitch.csproj
@@ -43,8 +43,7 @@
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>
-    </ApplicationIcon>
+    <ApplicationIcon>FaineSwitch.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup>
     <TargetZone>LocalIntranet</TargetZone>
@@ -240,8 +239,9 @@
     <Content Include="AS_dict.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <None Include="FaineSwitch.ico" />
-    <None Include="Resources\mainIcon.ico" />
+    <None Include="FaineSwitch.ico">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <PublishFile Include="AS_dict.txt">
