--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,14 +13,16 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Setup MSBuild
-      uses: microsoft/setup-msbuild@v1.0.2
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 5.0.17
 
     - name: Build FaineSwitcher project
-      run: msbuild FaineSwitcher/FaineSwitcher.csproj /p:Configuration=Release /p:OutputPath=bin/FaineSwitcher
+      run: dotnet build FaineSwitcher/FaineSwitcher.csproj --configuration Release --output bin/FaineSwitcher
 
     - name: Build FaineSwitcherSetup project
-      run: msbuild FaineSwitcherSetup/FaineSwitcherSetup.wixproj /p:Configuration=Release /p:OutputPath=bin/FaineSwitcherSetup
+      run: dotnet publish FaineSwitcherSetup/FaineSwitcherSetup.csproj -c Release -o bin/FaineSwitcherSetup --self-contained true -r win-x64
 
     - name: Create Release
       uses: actions/create-release@v1
