--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,10 +13,10 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v1
+    - name: Install .NET Core
+      uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: 5.0.10
+        dotnet-version: 6.0.x
 
     - name: Build FaineSwitcher project
       run: dotnet build FaineSwitcher/FaineSwitcher.csproj --configuration Release --output bin/FaineSwitcher
