Added .gitignore file and Disable signing of the ClickOnce manifest

--- a/FaineSwitcher/FaineSwitcher.csproj
+++ b/FaineSwitcher/FaineSwitcher.csproj
@@ -125,7 +125,7 @@
     <ManifestKeyFile>Mahou_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
-    <SignManifests>true</SignManifests>
+    <SignManifests>false</SignManifests>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
