--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,12 +28,10 @@ jobs:
       run: nuget restore FaineSwitcher/FaineSwitcher.sln
 
     - name: Build FaineSwitcher project
-      run: msbuild.exe FaineSwitcher/FaineSwitcher.csproj /p:Configuration=Release /p:OutputPath=bin/FaineSwitcher
+      run: msbuild.exe FaineSwitcher/FaineSwitcher.csproj /p:Configuration=Release /p:OutputPath=FaineSwitcher/bin/FaineSwitcher
   
     - name: Build FaineSwitcherSetup project
-      run: |
-          cd FaineSwitcherSetup
-          msbuild.exe FaineSwitcherSetup.wixproj /p:Configuration=Release  /p:OutputPath=bin/FaineSwitcherSetup
+      run: msbuild.exe FaineSwitcherSetup/FaineSwitcherSetup.wixproj /p:Configuration=Release  /p:OutputPath=FaineSwitcherSetup/bin/FaineSwitcherSetup
           
     - name: Create Release
       uses: actions/create-release@v1
@@ -52,7 +50,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.DEPLOY_GITHUB_TOKEN }}
       with:
-        files: "*.msi"
+        files: "FaineSwitcher/bin/FaineSwitcherSetup/*.msi"
         token: ${{ secrets.DEPLOY_GITHUB_TOKEN }}
         owner: ${{ github.repository_owner }}
         repo: ${{ github.event.repository.name }}
