--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,4 +61,26 @@ jobs:
         asset_name: FaineSwitcher.msi
         asset_content_type: application/octet-stream
 
+
+
+     - name: Generate Zip file
+      run: |
+        Compress-Archive -Path FaineSwitcher/bin/Debug_x86_x64 -DestinationPath FaineSwitcher/bin/Debug_x86_x64.zip
+
+    - name: Upload Zip Artifact
+      uses: actions/upload-artifact@v1
+      with:
+        name: myapp-zip
+        path: FaineSwitcher/bin/Debug_x86_x64.zip
+
+    - name: Attach Zip Artifact to Release
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.DEPLOY_GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: FaineSwitcher/bin/Debug_x86_x64.zip
+        asset_name: FaineSwitcherPortable.zip
+        asset_content_type: application/zip
+
    
