--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,8 @@ jobs:
       run: msbuild.exe FaineSwitcher/FaineSwitcher.csproj /p:Configuration=Release /p:OutputPath=FaineSwitcher/bin/Debug_x86_x64
 
     - name: Get File List
-      run: Get-ChildItem -Path FaineSwitcher/obj -Name -Recurse
+      run: |
+        Get-ChildItem -Path FaineSwitcher -Name -Recurse
 
     - name: Generate Zip file
       run: |
